@@ -1,5 +1,6 @@
 1.1.5 (????????????????) 
  - irc input now stores nick
+ - new output: lumberjack
 
 1.1.4 (October 28, 2012)
  ## Overview of this release:
